:bug: Fix overlapping bullet point on floating elements

--- a/style.css
+++ b/style.css
@@ -182,6 +182,8 @@ ol {
 	list-style-position: outside;
 	margin: 0 0 1.5em 0;
 	padding: 0 0 0 1em;
+	overflow: hidden;
+	zoom: 1;
 }
 
 .site-main li {
